k8s/filebrowser/resources/filebrowser.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - image: filebrowser/filebrowser:v2.49.0@sha256:e9ef7570b2e4110e9842f2e004f2aaac246e54e7fef2b3b9f4352a3a1bb04508
          name: filebrowser
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          resources:
            requests:
              memory: 100M
            limits:
              memory: 500M
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - name: media
              mountPath: /srv/media
            - name: config-volume
              mountPath: /config
            - name: config-map
              mountPath: /.filebrowser.json
              subPath: config.json
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: nfs-media
        - name: config-volume
          persistentVolumeClaim:
            claimName: config-volume
        - name: config-map
          configMap:
            name: config

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
